# ziv

./: .clang-format  .gitignore  .pre-commit-config.yaml  .prettierrc.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  conda-lock.yml  ziv-build.yml  ziv-dev.yml  ziv.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_feature_request.yml  02_bug_report.yml  03_documentation.yml  04_test.yml  05_ci_issue.yml  config.yml
.github/scripts/: update_changelog.py
.github/workflows/: ci.yml  codeql.yml  pr-checklist.yml  pr-conventional-commits.yml  pr_checklist.yml  triage_inactive_issues.yml  update_changelog.yml
compiler/: CMakeLists.txt
compiler/include/source/: source_buffer.hpp
compiler/src/source/: source_buffer.cpp
examples/: hello.ziv
lexer/: CMakeLists.txt  tokens.cpp  tokens.lex
lexer/include/: ziv_lexer.hpp  ziv_tokens.hpp  zivlexer.hpp
lexer/src/: input_processor.cpp  leer.cpp  token_matchers.cpp
lexer/tests/: lexer_test.cpp
scripts/: update_changelog.py
src/symbol_table/: symbol_table.cpp
src/symbol_table/include/: symbol_table.hpp
tests/: CMakeLists.txt
tests/toolchain/: source_buffer_test.cpp  test_command_manager.cpp
toolchain/: CMakeLists.txt
toolchain/ast/: node_kind.cpp  node_kind.hpp  node_kind_registry.def  printer.cpp  printer.hpp  tree.cpp  tree.hpp
toolchain/diagnostic/: diagnostic_consumer.hpp  diagnostic_kind.hpp  diagnostic_kind_registry.def
toolchain/diagnostics/: compilation_phase.hpp  diagnostic_base.hpp  diagnostic_consumer.cpp  diagnostic_consumer.hpp  diagnostic_context.hpp  diagnostic_emitter.hpp  diagnostic_kind.cpp  diagnostic_kind.hpp  diagnostic_kind_registry.def  diagnostic_message.hpp  diagnostic_metadata.hpp  diagnostic_registry.cpp  diagnostic_registry.hpp  source_location.hpp
toolchain/diagnostics/kinds/: lexer.def  parser.def  semantics.def
toolchain/diagnostics/metadata/: lexer.def  parser.def  semantics.def
toolchain/driver/: README.md  command.hpp  driver.cpp  driver.hpp
toolchain/driver/commands/: source_command.cpp  source_command.hpp
toolchain/lex/: lexer.cpp  lexer.hpp  token_buffer.cpp  token_buffer.hpp  token_kind.cpp  token_kind.hpp  token_kind_registry.def  token_record.def
toolchain/parser/: expression_parser.cpp  expression_parser.hpp  function_parser.cpp  module_parser.cpp  node_parser.cpp  operator_precedence.hpp  parser.cpp  parser.hpp  parser_utils.cpp  parser_utils.hpp  statement_parser.cpp  statement_parser.hpp  top_level_parser.hpp  variable_parser.cpp
toolchain/semantics/: checker.cpp  checker.hpp  symbol.cpp  symbol.hpp  symbol_kind_registry.def  symbol_table.cpp  symbol_table.hpp  type_kind_registry.def  types.cpp  types.hpp
toolchain/source/: README.md  source_buffer.cpp  source_buffer.hpp  source_extractor.cpp  source_extractor.hpp  source_location.hpp
zivc/: CMakeLists.txt  main.cpp
zivc/command/: command_manager.cpp  command_manager.hpp
zivc/include/ast/: expression_ast.hpp  node_ast.hpp
zivc/include/lexer/: lexer.hpp  lexer_buffer.hpp  tokens.hpp
zivc/source/: CMakeLists.txt  source_buffer.cpp  source_buffer.hpp  source_buffer_test.cpp
zivc/src/ast/: expression_ast.cpp  node_ast.cpp
zivc/src/lexer/: lexer.cpp
zivc/toolchain/: command.hpp  driver.cpp  driver.hpp
zivc/toolchain/commands/: lex_command.cpp  lex_command.hpp  parser_command.cpp  parser_command.hpp  source_command.cpp  source_command.hpp
zivc/tools/: test_lexer.cpp  testfile.z
